# muon-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Muon.yaml  README.md  config.toml  logs.toml  vcpkg-configuration.json  vcpkg.json
asset/: CMakeLists.txt
asset/include/muon/asset/: assetloader.hpp  audio.hpp  error.hpp  file.hpp  image.hpp  model.hpp  scene.hpp
asset/include/muon/assets/: file.hpp  model.hpp
asset/src/asset/: assetloader.cpp  file.cpp  image.cpp  model.cpp
asset/src/asset/audio/: opus.cpp  wav.cpp
asset/src/asset/image/: jpeg.cpp  png.cpp
asset/src/asset/model/: gltf.cpp  obj.cpp
asset/src/assets/: file.cpp  image.cpp  model.cpp
asset/src/assets/image/: jpeg.cpp
asset/src/assets/model/: gltf.cpp  obj.cpp
asset/test/: test.cpp
assets/: CMakeLists.txt
assets/include/muon/assets/: file.hpp  image.hpp
assets/pipeline/: compute.json  graphics.json  meshlet.json
assets/src/assets/: file.cpp  image.cpp
assets/src/assets/image/: jpeg.cpp  png.cpp
common/: CMakeLists.txt
common/include/muon/common/: compress.hpp  fs.hpp  log.hpp
common/src/: compress.cpp  fs.cpp  log.cpp
common/src/log/: logger.cpp
engine/: CMakeLists.txt
engine/include/muon/: utils.hpp
engine/include/muon/asset/: loader.hpp  manager.hpp
engine/include/muon/assets/: image.hpp  model.hpp
engine/include/muon/core/: application.hpp  arena.hpp  assert.hpp  base.hpp  engine_context.hpp  entry_point.hpp  errors.hpp  event.hpp  event_data.hpp  input.hpp  layer.hpp  layer_stack.hpp  log.hpp  no_copy.hpp  platform_detection.hpp  project.hpp  resource.hpp  window.hpp
engine/include/muon/debug/: profiler.hpp
engine/include/muon/engine/: buffer.hpp  debug_ui.hpp  debugui.hpp  descriptor.hpp  device.hpp  framebuffer.hpp  framegraph.hpp  framehandler.hpp  image.hpp  material.hpp  mesh.hpp  model.hpp  model.inl  pipeline.hpp  renderer.hpp  rendergraph.hpp  renderpass.hpp  rendersystem.hpp  shader.hpp  swapchain.hpp  texture.hpp  version.hpp  vertex.hpp  window.hpp
engine/include/muon/event/: data.hpp  dispatcher.hpp  event.hpp
engine/include/muon/fs/: fs.hpp  stream_reader.hpp  stream_writer.hpp
engine/include/muon/graphics/: buffer.hpp  context.hpp  device.hpp  device_context.hpp  device_extensions.hpp  frame_manager.hpp  gpu.hpp  image.hpp  instance_extensions.hpp  mesh.hpp  pipeline_base.hpp  pipeline_compute.hpp  pipeline_graphics.hpp  pipeline_layout.hpp  pipeline_mesh.hpp  pipeline_meshlet.hpp  queue.hpp  queue_allocator.hpp  queue_context.hpp  queue_index_helper.hpp  queue_info.hpp  renderer.hpp  resource.hpp  shader_compiler.hpp  shader_reflection.hpp  swapchain.hpp  texture.hpp
engine/include/muon/input/: action.hpp  input_state.hpp  key.hpp  key_code.hpp  modifier.hpp  mouse.hpp
engine/include/muon/log/: logger.hpp
engine/include/muon/misc/: logger.hpp
engine/include/muon/platform/: window.hpp
engine/include/muon/profiling/: profiler.hpp
engine/include/muon/renderer/: buffer.hpp  debug_ui.hpp  device.hpp  frame_handler.hpp  image.hpp  material.hpp  mesh.hpp  model.hpp  swapchain.hpp  texture.hpp
engine/include/muon/schematic/: color_blend_attachment_info.hpp  color_blend_state.hpp  color_blend_state_info.hpp  common.hpp  depth_stencil_state_info.hpp  dynamic_state_info.hpp  input_assembly_state.hpp  input_assembly_state_info.hpp  multisample_state.hpp  multisample_state_info.hpp  pipeline.hpp  pipeline_state.hpp  pipeline_state_info.hpp  rasterization_state.hpp  rasterization_state_info.hpp  shader.hpp  stencil_op_state_info.hpp  viewport_state.hpp  viewport_state_info.hpp
engine/src/: buffer.cpp  device.cpp  pipeline.cpp  renderer.cpp  swapchain.cpp  window.cpp
engine/src/asset/: manager.cpp
engine/src/assets/: image.cpp  model.cpp
engine/src/core/: application.cpp  arena.cpp  errors.hpp  hash.cpp  hash.hpp  log.cpp  platform_detection.hpp  project.cpp  window.cpp
engine/src/debug/: profiler.cpp
engine/src/engine/: buffer.cpp  computesystem.cpp  debug_ui.cpp  debugui.cpp  device.cpp  frame_handler.cpp  framebuffer.cpp  framegraph.cpp  framehandler.cpp  image.cpp  material.cpp  mesh.cpp  model.cpp  pipeline.cpp  renderer.cpp  rendergraph.cpp  renderpass.cpp  rendersystem.cpp  shader.cpp  swapchain.cpp  texture.cpp  window.cpp
engine/src/fs/: fs.cpp
engine/src/graphics/: buffer.cpp  context.cpp  device_context.cpp  device_extensions.hpp  frame_manager.cpp  gpu.cpp  image.cpp  image.hpp  instance_extensions.hpp  mesh.cpp  mesh.hpp  pipeline_base.cpp  pipeline_compute.cpp  pipeline_graphics.cpp  pipeline_graphics.hpp  pipeline_layout.cpp  pipeline_mesh.cpp  pipeline_meshlet.cpp  pipeline_meshlet.hpp  queue.cpp  queue_allocator.cpp  queue_context.cpp  queue_index_helper.cpp  queue_info.cpp  queue_info.hpp  renderer.cpp  shader_compiler.cpp  shader_compiler.hpp  shader_reflection.cpp  swapchain.cpp  texture.cpp
engine/src/input/: action.cpp  modifier.cpp
engine/src/log/: logger.cpp
engine/src/misc/: logger.cpp
engine/src/platform/: window.cpp
engine/src/profiling/: profiler.cpp
engine/src/renderer/: buffer.cpp  debug_ui.cpp  device.cpp  frame_handler.cpp  image.cpp  material.cpp  mesh.cpp  model.cpp  shader.cpp  swapchain.cpp  texture.cpp
engine/src/schematic/: pipeline.cpp  shader.cpp
engine/src/scripting/: script_manager.cpp
engine/src/utils/: color.cpp  fs.cpp  literals.cpp  pretty_print.cpp  prettyprint.cpp
engine/tests/: main.cpp
engine/tests/core/: arena.cpp
engine/tests/schematic/: pipeline.cpp  shader.cpp
engine/tests/utils/: alignment.cpp  literals.cpp
muon-engine/: CMakeLists.txt
muon-engine/tests/: main.cpp
muon-engine/tests/core/: arena.cpp  uuid.cpp
muon-engine/tests/maths/: alignment.cpp
muon-engine/tests/utils/: alignment.cpp
src/: main.cpp
test/: CMakeLists.txt  test.cpp
test/assets/models/: cube.glb  cube.gltf  test.gltf
test/assets/shaders/: base.vs.hlsl  shader.comp  shader.frag  shader.vert  shader.vert.spv  swizzle.comp  tonemap.comp  uicomposite.comp
test/src/: g_buffer.cpp  g_buffer.hpp  logger.cpp  logger.hpp  main.cpp
(+369 files in other folders)
